<resources>
    <string name="app_name">WoW Races</string>
    <string name="copyrights">© Art: dcmjs.com  \n© Icons and info: Blizzard</string>
    <string name="alliance">Alliance</string>
    <string name="horde">Horde</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_racials">Racials</string>
    <string name="tab_classes">Classes</string>
    <string name="tab_misc">More</string>
    <string name="human">Human</string>
    <string name="human_desc">The humans are the most populous and the youngest race in Azeroth.
        The humans have become the de facto leaders of the Alliance, with their youthful ambitions
        and resilience.
        \n\nLeader: Anduin Wrynn.
        \n\nCapital City: The human seat of power is in the rebuilt city of Stormwind City.
        \n\nStarting Zone: Humans begin questing in Elwynn Forest.
        \n\nRacial Mounts: Katie Stokx sells armoried ponies in Stormwind, and Corporal Arthur Flew at the Argent Tournament has a few distinct models.
    </string>
    <string name="dwarf">Dwarf</string>
    <string name="dwarf_desc">The dwarves are a hardy race, hailing from Khaz Modan in the Eastern
        Kingdoms. Rumor has it they are descended from the Titans. There are three main clans of
        dwarves vying for power in Ironforge: the Bronzebeards, Wildhammers, and Dark Irons.</string>
    <string name="gnome">Gnome</string>
    <string name="gnome_desc"> The gnomes are a quirky race, obsessed with gadgets and technology.
        They originally come from the city of New Tinkertown, which was destroyed by High Tinker Mekkatorque
        in an attempt to save it from an invading army of troggs.</string>
    <string name="night_elf">Night Elf</string>
    <string name="night_elf_desc"> The night elves are an ancient and mysterious race. They lived in
        Kalimdor for thousands of years, undisturbed until the world tree was sacrificed to halt the
        advance of the Burning Legion prior to the events of World of Warcraft.</string>
    <string name="draenei">Draenei</string>
    <string name="draenei_desc">The Draenei are followers of the Naaru and worshipers of the Holy Light.
        They originally hail from the distant world of Argus, fleeing after Sargeras tried to corrupt them.
        They then settled on the Orcish homeworld of Draenor, where after a period of peace, they were
        brutally murdered during Guldan's corruption of the Orcs. Finally they settled in Azeroth, to seek
        aid in their battle against the Burning Legion. \n\nDraenei were introduced in the Burning Crusade expansion.</string>
    <string name="worgen">Worgen</string>
    <string name="worgen_desc">Behind the formidable Greymane Wall,a terrible curse transformed
        some of the stalwart citizens of the isolated kingdom of Gilneas into nightmarish lupine
        beasts known as worgen. Human scholars intensely debated the origins of the curse, until
        it was revealed that the original worgen were not—as previously believed—nightmares from
        another dimension, but cursed night elf druids.</string>
    <string name="orc">Orc</string>
    <string name="orc_desc">The orcs were originally a race of noble savages, residing on the world
        of Draenor. Unfortunately, The Burning Legion made use of them in an attempt to conquer Azeroth
        — they were infected with the daemonic blood of Mannoroth the Destructor, driven mad, and turned
        upon both the Draenei and the denizens of Azeroth. After losing the Second War, they were cut
        off from the corrupting influence of Mannoroth, and began to return to their shamanistic roots.
        Now, under the leadership of their new Warchief, the orcs are carving out a home for themselves in Azeroth.</string>
    <string name="troll">Troll</string>
    <string name="troll_desc"> While there are many different tribes of trolls scattered across Azeroth,
        only the Darkspear Tribe has ever sworn allegiance to the Horde. The trolls originally lived in
        the Broken Isles, but were overrun by naga and murlocs and driven from their home. The orcs,
        led by Thrall, saved the Darkspear tribe from certain destruction and offered them amnesty among
        the Horde. In return, the Darkspear tribe swore fealty to the orcish warchief.</string>
    <string name="tauren">Tauren</string>
    <string name="tauren_desc">The tauren, a race with deep shamanistic roots, are longtime residents
        of Kalimdor. They have a deep and abiding love of nature, and the vast majority of them worship
        a deity known as the Earth Mother.</string>
    <string name="undead">Undead</string>
    <string name="undead_desc">When the undead scourge initially swept across Azeroth, they converted
        a number of members of the Alliance to the undead. When the combined forces of the orcs, elves,
        trolls, dwarves and humans began to fight back, though, The Lich King\'s hold on his forces
        began to weaken. A small faction of humans, known as the Forsaken, broke free of the Lich King's control.
        \n\nNow, free of the bonds of servitude as well as the troublesome emotions and connections of their human lives,
        the Forsaken have found a new home—with the Horde.</string>
    <string name="blood_elf">Blood Elf</string>
    <string name="bloodelf_desc">The blood elves are a proud, haughty race, joining the Horde in
        Burning Crusade. They represent a faction of former high elves, split off from the rest of elven
        society; they are also survivors of Arthas\' assault on Silvermoon. Blood elves are fully dependent
        on magic, having revelled in its power for so long that they suffer horrible withdrawal if it
        were to be taken away.</string>
    <string name="goblin">Goblin</string>
    <string name="goblin_desc">After series of cataclysmic events in the Lost Isles and the Undermine,
        a betrayal from one of their own trade princes, and open hostility from members of the Alliance,
        the goblins of the Bilgewater Cartel decide that their relations with the Horde can no longer
        be neutral. Through the orcs, the goblins enter the Horde, becoming the 6th race to follow the
        Warchief\'s leadership.</string>
    <string name="warrior">Warrior</string>
    <string name="paladin">Paladin</string>
    <string name="death_knight">Death Knight</string>
    <string name="shaman">Shaman</string>
    <string name="hunter">Hunter</string>
    <string name="druid">Druid</string>
    <string name="rogue">Rogue</string>
    <string name="mage">Mage</string>
    <string name="warlock">Warlock</string>
    <string name="priest">Priest</string>
    <string name="warrior_specs">Arms · Fury · Protection</string>
    <string name="paladin_specs">Holy · Retribution · Protection</string>
    <string name="death_knight_specs">Blood · Unholy · Frost</string>
    <string name="shaman_specs">Elemental · Enhancement · Restoration</string>
    <string name="hunter_specs">Beast Mastery · Survival · Marksmanship</string>
    <string name="druid_specs">Restoration · Balance · Guardian · Feral</string>
    <string name="rogue_specs">Assassination · Outlaw · Subtlety</string>
    <string name="priest_specs">Holy · Discipline · Shadow</string>
    <string name="mage_specs">Fire · Frost · Arcane</string>
    <string name="warlock_specs">Destruction · Affliction · Demonology</string>
    <string name="passive">Passive</string>
    <string name="active">Active</string>
    <string name="nature_resistance">Nature Resistance</string>
    <string name="nature_resistance_desc">Reduces Nature damage taken by 1%.</string>
    <string name="shadow_resistance">Shadow Resistance</string>
    <string name="shadow_resistance_desc">Reduces Shadow damage taken by 1%.</string>
    <string name="arcane_resistance">Arcane Resistance</string>
    <string name="arcane_resistance_desc">Reduces Arcane damage taken by 1%.</string>
    <string name="diplomacy">Diplomacy</string>
    <string name="diplomacy_desc">Reputation gains increased by 10%.</string>
    <string name="every_man_for_himself">Every Man for Himself</string>
    <string name="every_man_for_himself_desc">Removes all stun effects. This effect shares a 30 sec cooldown with other similar effects.</string>
    <string name="the_human_spirit">The Human Spirit</string>
    <string name="the_human_spirit_desc">You gain 2% more of all secondary stats (Haste, Critical Strike, Mastery, Versatility) from all sources.</string>
    <string name="explorer">Explorer</string>
    <string name="explorer_desc">You find additional fragments when looting archaeological finds and you can survey faster than normal archaeologists.</string>
    <string name="frost_resistance">Frost Resistance</string>
    <string name="frost_resistance_desc">Reduces Frost damage taken by 1%.</string>
    <string name="might_of_the_mountain">Might of the Mountain</string>
    <string name="might_of_the_mountain_desc">Critical strike damage and healing increased by 2%.</string>
    <string name="stoneform">Stoneform</string>
    <string name="stoneform_desc">Removes all poison, disease, curse, magic, and bleed effects and reduces all physical damage taken by 10% for 8 sec.</string>
    <string name="engineering_specialization">Engineering Specialization</string>
    <string name="engineering_specialization_desc">Engineering skill increased by 15.</string>
    <string name="escape_artist">Escape Artist</string>
    <string name="escape_artist_desc">Escape the effects of any immobilization or movement speed reduction effect.</string>
    <string name="expansive_mind">Expansive Mind</string>
    <string name="expansive_mind_desc">Maximum mana/energy/runic power/focus/rage increased by 5%.</string>
    <string name="nimble_fingers">Nimble Fingers</string>
    <string name="nimble_fingers_desc">Haste increased by 1%.</string>
    <string name="quickness">Quickness</string>
    <string name="quickness_desc">Increases your chance to dodge melee and ranged attacks by 2%, and your movement speed by 2%.</string>
    <string name="shadowmeld">Shadowmeld</string>
    <string name="shadowmeld_desc">Activate to slip into the shadows, reducing the chance for enemies to detect your presence. Lasts until cancelled or upon moving. Any threat is restored versus enemies still in combat upon cancellation of this effect.</string>
    <string name="touch_of_elune">Touch of Elune</string>
    <string name="touch_of_elune_desc">Increases your Haste by 1% during the night. Increases your Critical Strike by 1% during the day.</string>
    <string name="wisp_spirit">Wisp Spirit</string>
    <string name="wisp_spirit_desc">Transform into a wisp upon death, increasing speed by 75%.</string>
    <string name="gemcutting">Gemcutting</string>
    <string name="gemcutting_desc">Jewelcrafting skill increased by 10.</string>
    <string name="gift_of_the_naaru">Gift of the Naaru</string>
    <string name="gift_of_the_naaru_desc">Heals the target for 20% of the caster\'s total health over 5 sec.</string>
    <string name="heroic_presence">Heroic Presence</string>
    <string name="heroic_presence_desc">Increases your Strength, Agility, and Intellect by 425 (scales with level).</string>
    <string name="altered_form">Altered Form</string>
    <string name="altered_form_desc">Enables Worgens to switch between human and Worgen forms.</string>
    <string name="two_forms">Two Forms</string>
    <string name="two_forms_desc">Turn into your currently inactive form.</string>
    <string name="darkflight">Darkflight</string>
    <string name="darkflight_desc">Activates your true form, increasing current movement speed by an additional 40% for 10 sec.</string>
    <string name="running_wild">Running Wild</string>
    <string name="running_wild_desc">(Mount) Drop to all fours to run as fast as a wild animal.</string>
</resources>